# machine

./: .gitignore  README.md  env.py  fps.py  install.md  install.sh  tmp.txt  tmp.txt.md
StrongSORT/: detect.py  detect_mutiple.py  opencv.py  requirements.txt  track.py  track_mutiple.py  yolov5_config.json
StrongSORT/utils/: serial_control.py  work.py
TOF_01_linux/: CMakeLists.txt  Makefile  READ_ME  build.sh
TOF_01_linux/app/: node.cpp
TOF_01_linux/src/src/: C3iroboticsLidar.cpp
Tools/: README.md  config.yaml  dump.rdb  main.py
YOLOX_deepsort_tracker/: requirements.txt
Yolov5_DeepSORT/: track.py
center/: arduino.py  boot.py  convertPoints.py  dump.rdb  log.txt  main.py  main_wheel.py  requirements.txt  ret.py  run.py  scan.py  scripts.py  test.py  test2.py  work.py  x.py  xbox.py
conert/: onnx2engin.py  pt2onnx.py
distance/: distance.py
jetcam/: test.py
motor/: motor.py  motor_pwm.py
opencv/: test.py
pianshen/: index.py
redisConn/: index.py
serial/: serial  serial.c
src/: build.sh  go.build.sh  read.me  stop.build.sh
src3/: build.sh  go.build.sh
xbox/: .a.out.icloud  .go.cpp.icloud  .test.c.icloud  Makefile  README.md  a.out  b.out  default  default.cpp  first  first.cpp  keyboard.py  main  main.cpp  parse  parse.cpp  pygame.py  redisCli  redisCli.c  redisCli.h  second  seria  seria.cpp  serial.c  serial.h  test  test.cpp  xbox
xbox360controller/: test.py
yolov5/: detect.py  detect_track.py  distance.py  export.py  requirements.txt  train.py  val.py
yolov5_mutiple_camera/: camera.py  detect.py  web_main.py  yolov5.py
(+160 files in other folders)
